--- a/src/components/try.html
+++ b/src/components/try.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div class="container-fluid"></div>
-
+    <div class="d-flex">
+      <Link to="" role="button" class="btn btn-primary"></Link
+      ><Link to="" role="button" class="btn btn-primary"></Link>
+    </div>
   </body>
 </html>
