--- a/src/components/NoteItem.css
+++ b/src/components/NoteItem.css
@@ -1,4 +1,13 @@
 
-i{
+.i{
     cursor: pointer;
+}
+.noteitem{
+    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.174);
+    border-radius: 1rem;
+
+}
+.noteitem:hover{
+   box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.388);
+    border-radius: 0.5rem; 
 }
